<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Incidencias</string>

    <string-array name="urgencia">
        <item>Alta</item>
        <item>Mediana</item>
        <item>Baja</item>
    </string-array>

    <!--Login-->
    <string name="incidents">Incidencias</string>

    <!--Menu-->
    <string name="addInci">Añadir Incidencias</string>
    <string name="listInci">Listar Incidencias</string>
    <string name="delInci">Eliminar Incidencias</string>
    <string name="settings">Ajustes</string>

    <!--Add Incidents-->
    <string name="add_bar">Añadir</string>
    <string name="add_tittle">Titulo</string>
    <string name="add_urgency">Urgencia</string>
    <string name="add_button">Confirmar</string>

    <!--List Incidents-->
    <string name="list_bar">Listar</string>
    <string name="list_id">Id</string>
    <string name="list_tittle">Titulo</string>
    <string name="list_urgency">Urgencia</string>
    <string name="list_status">Estado</string>


    <!--Delete Incidents-->
    <string name="delete_bar">Eliminar</string>
    <string name="delete_insertID">ID para eliminar:</string>
    <string name="delete_button">Confirmar</string>

    <!--Settings-->
    <string name="setting_bar">Ajustes</string>
    <string name="set_spanish">Español</string>
    <string name="set_english">Inglés</string>
    <string name="set_french">Francés</string>
    <string name="reset">Restablecer preferencias</string>

    <!--Description-->
    <string name="desc_bar">Descripción</string>
    <string name="desc_tittle">Titulo:</string>
    <string name="desc_date">Fecha:</string>
    <string name="desc_info">Descripción:</string>
    <string name="desc_estado">Urgencia:</string>

    <!--Status-->
    <string name="status_pen">Pendiente</string>
    <string name="status_assigned">Asignada</string>
    <string name="status_resolved">Resuelta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>