<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_Anadir">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="520dp">

        <TextView
            android:id="@+id/txtBackground"
            android:layout_width="412dp"
            android:layout_height="50dp"
            android:background="@color/c6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtAnadir"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/manjari_bold"
            android:gravity="center_horizontal"
            android:text="@string/add_bar"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtBackground"
            app:layout_constraintEnd_toEndOf="@+id/txtBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/manjari_regular"
            android:gravity="center_horizontal"
            android:text="@string/add_tittle"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBackground" />

        <TextView
            android:id="@+id/txtDesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/manjari_regular"
            android:gravity="center_horizontal"
            android:text="@string/desc_bar"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EdtTitulo">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:fontFamily="@font/manjari_regular"
                android:gravity="center"
                android:text="@string/add_urgency"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerUrgencia"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:background="@drawable/spinner_background" />

        </LinearLayout>

        <EditText
            android:id="@+id/EdtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDesc2" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/manjari_bold"
            android:text="@string/add_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDescripcion" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>