<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_Descripcion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtBackground"
            android:layout_width="412dp"
            android:layout_height="50dp"
            android:background="@color/c6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/manjari_bold"
            android:gravity="center_horizontal"
            android:text="@string/desc_bar"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtBackground"
            app:layout_constraintEnd_toEndOf="@+id/txtBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/txtTituloDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/manjari_regular"
            android:text="@string/desc_tittle"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBackground" />

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/manjari_regular"
            android:text="@string/desc_date"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloDesc" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/manjari_regular"
            android:text="@string/desc_info"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/txtBackground"
            tools:layout_editor_absoluteX="199dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:layout_editor_absoluteX="199dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:layout_editor_absoluteX="199dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>