<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <ImageButton
                android:id="@+id/imageButtonAnadir"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIncidencias"
                app:srcCompat="@drawable/anadir" />

            <TextView
                android:id="@+id/txtEspanol"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/addInci"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonAnadir" />

            <ImageButton
                android:id="@+id/imageButtonListar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/imageButtonAnadir"
                app:layout_constraintTop_toBottomOf="@+id/textViewIncidencias"
                app:srcCompat="@drawable/lista" />

            <TextView
                android:id="@+id/textViewListar"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/listInci"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/txtEspanol"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonListar" />

            <ImageButton
                android:id="@+id/imageButtonEliminar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/imageButtonListar"
                app:layout_constraintTop_toBottomOf="@+id/textViewIncidencias"
                app:srcCompat="@drawable/eliminar" />

            <TextView
                android:id="@+id/textViewEliminar"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/delInci"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewListar"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonEliminar" />

            <ImageButton
                android:id="@+id/imageButtonAjustes"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/imageButtonEliminar"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ajustes" />

            <TextView
                android:id="@+id/textViewAyuda"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewEliminar"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonAjustes" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>